Fixed bug #29424 (width and height inverted for JPEG2000 files).